--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.0.2",
     "@mui/styled-engine-sc": "^6.0.2",
     "@mui/x-date-pickers": "^7.16.0",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "global": "^4.4.0",
@@ -26,6 +27,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
