--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "global": "^4.4.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
+    "next-cookies": "^2.0.3",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
